# python-ari

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ari/: __init__.py  client.py  event.py  exception.py
ari/cmd/: shell.py
ari/common/: base.py  http.py  utils.py
ari/openstack/common/: gettextutils.py  jsonutils.py  log.py
ari/shell/v1/: application.py  base.py  bridge.py  channel.py  devicestate.py  endpoint.py  sound.py
ari/tests/: __init__.py  base.py  utils.py
ari/tests/v1/: test_application.py  test_bridge.py  test_channel.py  test_devicestate.py  test_endpoint.py  test_sound.py
ari/v1/: .client.py.swp  application.py  bridge.py  channel.py  client.py  devicestate.py  endpoint.py  sound.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst  v1_channel.rst
examples/: demo.py
tools/: install_venv.py
