[metadata]
name = python-ari
version = 0.0.2
summary = Python binding for ARI
description-file =
    README.rst
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
home-page = https://github.com/kickstandproject/python-ari
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[pbr]
warnerrors = True

[files]
packages =
    ari

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ari/locale
domain = python-ari

[update_catalog]
domain = python-ari
output_dir = ari/locale
input_file = ari/locale/python-ari.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ari/locale/python-ari.pot
